rust/katsuobushi-controller/src/sandbox/snapshots/katsuctl__sandbox__start__tests__snapshot_agent_graphics_software_fallback.snap
---
source: rust/katsuobushi-controller/src/sandbox/start.rs
expression: recipe
---
#!/usr/bin/env bash
set -euo pipefail

# katsuctl sandbox start: set up and boot agent instance '20260627-120000-4242'
mkdir -p '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
chmod 700 '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
chmod 700 '/state/katsuobushi'
chmod a+rwX '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242'

# Log provisioning from here (the runner's own console.log only starts at boot).
exec 3>&1 4>&2
exec > >(tee -a '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/provision.log' >&3) 2> >(tee -a '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/provision.log' >&4)
phase() { printf '%s\n' "$1" > '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'; _t0=$SECONDS; printf '::: %s\n' "$1"; }
phase_done() { printf '::: done (%ss)\n' "$((SECONDS-_t0))"; }
trap 'rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'' EXIT INT TERM

# Per-instance bare git mirror + seeded branch (the guest clones it and pushes back).
phase 'staging project mirror'
/nix/store/git/bin/git clone --bare '/home/user/project' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git' >/dev/null 2>&1
/nix/store/git/bin/git -C '/home/user/project' push --quiet '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git' "a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0:refs/heads/sandbox/20260627-120000-4242" --force
chmod -R a+rwX '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git'
phase_done

# Ephemeral ssh keypair (private key stays in the runtime tmpfs; pubkey travels in the share).
[ -f '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id' ] || /nix/store/openssh/bin/ssh-keygen -t ed25519 -N "" -f '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id' -q
cp '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id.pub' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/authorized_keys'

# Per-instance launch environment for the microvm runner.
export KATSU_STATE_DIR='/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
export KATSU_SSH_PORT=22042
export KATSU_VSOCK_CID=4242
echo "sandbox: graphics enabled" >&2

# Back each guest disk image from the persistent state dir via a runtime symlink.
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img'
cd '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'

# Provisioning done: restore the real stdout/stderr before the runner takes over.
phase 'booting VM'
exec 1>&3 2>&4 3>&- 4>&-

# Agent mode: detach a lingering VM (setsid) that outlives this script.
setsid /nix/store/microvm/bin/microvm-run > '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/console.log' 2>&1 < /dev/null &
vm=$!
disown "$vm" 2>/dev/null || true
rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'
echo "sandbox: agent instance '20260627-120000-4242' running (cid 4242)."
echo "sandbox: prompt it with: sandbox prompt 20260627-120000-4242 \"<text>\""
[ -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/directive.md' ] && echo "sandbox: or resend its original directive: sandbox prompt 20260627-120000-4242 --redeliver" || true
exit 0
