rust/katsuobushi-controller/src/sandbox/snapshots/katsuctl__sandbox__start__tests__snapshot_agent_with_import_host_store_db_and_context.snap
---
source: rust/katsuobushi-controller/src/sandbox/start.rs
expression: "render(&spec, &plan(\"20260627-120000-4242\", false, Mode::Agent))"
---
#!/usr/bin/env bash
set -euo pipefail

# katsuctl sandbox start: set up and boot agent instance '20260627-120000-4242'
mkdir -p '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
chmod 700 '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
chmod 700 '/state/katsuobushi'
chmod a+rwX '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242'

# Log provisioning from here (the runner's own console.log only starts at boot).
exec 3>&1 4>&2
exec > >(tee -a '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/provision.log' >&3) 2> >(tee -a '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/provision.log' >&4)
phase() { printf '%s\n' "$1" > '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'; _t0=$SECONDS; printf '::: %s\n' "$1"; }
phase_done() { printf '::: done (%ss)\n' "$((SECONDS-_t0))"; }
trap 'rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'' EXIT INT TERM

# Per-instance bare git mirror + seeded branch (the guest clones it and pushes back).
phase 'staging project mirror'
/nix/store/git/bin/git clone --bare '/home/user/project' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git' >/dev/null 2>&1
/nix/store/git/bin/git -C '/home/user/project' push --quiet '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git' "a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0:refs/heads/sandbox/20260627-120000-4242" --force
chmod -R a+rwX '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/sync.git'
phase_done

# Snapshot the host Nix DB so the guest reuses host-built paths (non-fatal).
# VACUUM INTO, not .backup: SQLite's backup API restarts from page zero
# whenever another connection writes the source, and the nix-daemon writes
# db.sqlite on every derivation registration — so a snapshot overlapping any
# host `nix build` (a concurrent launch is one) restarts indefinitely.
# VACUUM INTO holds a read transaction instead and completes. `timeout` is
# belt-and-braces: on expiry the guest boots unseeded, the already-designed
# fallback, rather than wedging provisioning.
phase 'snapshotting host nix DB'
hostdb="${NIX_STATE_DIR:-/nix/var/nix}/db/db.sqlite"
rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/.nix-db.sqlite.tmp'
[ -r "$hostdb" ] && timeout 120 /nix/store/sqlite/bin/sqlite3 "$hostdb" 'VACUUM INTO '\''/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/.nix-db.sqlite.tmp'\''' 2>/dev/null && mv -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/.nix-db.sqlite.tmp' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.sqlite' || { rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/.nix-db.sqlite.tmp'; echo 'WARNING: host Nix DB snapshot failed or exceeded 120s — the guest will boot with a system-only store DB (host-built paths won'\''t be valid in the VM).'; }
phase_done

# Stage declared untracked context (rsync --safe-links drops escaping symlinks).
phase 'staging workspace context'
rm -rf '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context'
mkdir -p '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context'
[ -e '/home/user/project/dist/build.tar' ] && { mkdir -p '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context/dist'; /nix/store/rsync/bin/rsync -a --safe-links '/home/user/project/dist/build.tar' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context/dist'/; } || true
[ -e '/home/user/project/data/seed.json' ] && { mkdir -p '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context/data'; /nix/store/rsync/bin/rsync -a --safe-links '/home/user/project/data/seed.json' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/context/data'/; } || true
phase_done

# Declared secrets, staged as references — the value is re-read at runtime, never baked in.
phase 'staging secrets'
if [ ! -r '/run/host-secrets/extra' ]; then
  echo "sandbox: required secret EXTRA_TOKEN not readable at /run/host-secrets/extra." >&2
  exit 1
fi
install -m 0600 '/run/host-secrets/extra' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/cred-EXTRA_TOKEN'
export KATSU_CRED_EXTRA_TOKEN='/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/cred-EXTRA_TOKEN'
phase_done

# Ephemeral ssh keypair (private key stays in the runtime tmpfs; pubkey travels in the share).
[ -f '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id' ] || /nix/store/openssh/bin/ssh-keygen -t ed25519 -N "" -f '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id' -q
cp '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/id.pub' '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/authorized_keys'

# Per-instance launch environment for the microvm runner.
export KATSU_STATE_DIR='/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242'
export KATSU_SSH_PORT=22042
export KATSU_VSOCK_CID=4242

# Back each guest disk image from the persistent state dir via a runtime symlink.
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/rw-store.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/nix-db.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img' '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242/scratch.img'
cd '/run/katsuobushi/cdata/katsuobushi/20260627-120000-4242'

# Provisioning done: restore the real stdout/stderr before the runner takes over.
phase 'booting VM'
exec 1>&3 2>&4 3>&- 4>&-

# Agent mode: detach a lingering VM (setsid) that outlives this script.
setsid /nix/store/microvm/bin/microvm-run > '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/console.log' 2>&1 < /dev/null &
vm=$!
disown "$vm" 2>/dev/null || true
rm -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/phase'
echo "sandbox: agent instance '20260627-120000-4242' running (cid 4242)."
echo "sandbox: prompt it with: sandbox prompt 20260627-120000-4242 \"<text>\""
[ -f '/state/katsuobushi/cdata/katsuobushi/20260627-120000-4242/directive.md' ] && echo "sandbox: or resend its original directive: sandbox prompt 20260627-120000-4242 --redeliver" || true
exit 0
