rust/katsuobushi-controller/src/sandbox/snapshots/katsuctl__sandbox__start__tests__snapshot_named_agent_with_prompt.snap
---
source: rust/katsuobushi-controller/src/sandbox/start.rs
expression: "render(&spec, &p)"
---
#!/usr/bin/env bash
set -euo pipefail

# katsuctl sandbox start: set up and boot agent instance 'myfeature-0badf00d'
mkdir -p '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d' '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d'
chmod 700 '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d'
chmod 700 '/state/katsuobushi'
chmod a+rwX '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d'

# Log provisioning from here (the runner's own console.log only starts at boot).
exec 3>&1 4>&2
exec > >(tee -a '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/provision.log' >&3) 2> >(tee -a '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/provision.log' >&4)
phase() { printf '%s\n' "$1" > '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/phase'; _t0=$SECONDS; printf '::: %s\n' "$1"; }
phase_done() { printf '::: done (%ss)\n' "$((SECONDS-_t0))"; }
trap 'rm -f '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/phase'' EXIT INT TERM

# Per-instance bare git mirror + seeded branch (the guest clones it and pushes back).
phase 'staging project mirror'
# resuming named instance from its existing branch (existingbranch789)
chmod -R a+rwX '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/sync.git'
phase_done

# Declared secrets, staged as references — the value is re-read at runtime, never baked in.
phase 'staging secrets'
if [ -z "${HARNESS_OAUTH_TOKEN:-}" ]; then
  echo "sandbox: required secret CLAUDE_CODE_OAUTH_TOKEN is not set on the host (expected in \$HARNESS_OAUTH_TOKEN)." >&2
  exit 1
fi
rm -f '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/cred-CLAUDE_CODE_OAUTH_TOKEN' && (umask 077; printf '%s' "${HARNESS_OAUTH_TOKEN}" > '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/cred-CLAUDE_CODE_OAUTH_TOKEN')
export KATSU_CRED_CLAUDE_CODE_OAUTH_TOKEN='/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/cred-CLAUDE_CODE_OAUTH_TOKEN'
phase_done

# Ephemeral ssh keypair (private key stays in the runtime tmpfs; pubkey travels in the share).
[ -f '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id' ] || /nix/store/openssh/bin/ssh-keygen -t ed25519 -N "" -f '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id' -q
cp '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/id.pub' '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/authorized_keys'

# Per-instance launch environment for the microvm runner.
export KATSU_STATE_DIR='/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d'
export KATSU_SSH_PORT=22042
export KATSU_VSOCK_CID=4242

# Back each guest disk image from the persistent state dir via a runtime symlink.
ln -sfn '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/rw-store.img' '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/rw-store.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/nix-db.img' '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/nix-db.img'
ln -sfn '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/scratch.img' '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/scratch.img'
cd '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d'

# Provisioning done: restore the real stdout/stderr before the runner takes over.
phase 'booting VM'
exec 1>&3 2>&4 3>&- 4>&-

# Agent mode: detach a lingering VM (setsid) that outlives this script.
setsid /nix/store/microvm/bin/microvm-run > '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/console.log' 2>&1 < /dev/null &
vm=$!
disown "$vm" 2>/dev/null || true
rm -f '/state/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/phase'
echo "sandbox: agent instance 'myfeature-0badf00d' running (cid 4242)."
# Wait for the VM's QMP monitor socket before delivering the first turn.
for _ in $(seq 1 120); do [ -S '/run/katsuobushi/cdata/katsuobushi/myfeature-0badf00d/katsuobushi.sock' ] && break; sleep 0.5; done
# Deliver the first turn by tail-calling the prompt subcommand (it bakes in the channel readiness wait).
exec katsuctl sandbox --config '/nix/store/katsuctl-sandbox-spec.json' prompt "myfeature-0badf00d" 'continue the work'
